# invoicing

./: Cargo.toml
docs/plans/: 2026-02-21-client-report-pdf-design.md
plans/: minimal-cli-invoicing-system.md
src/: error.rs  lib.rs  main.rs
src/config/: client.rs  company.rs  item.rs  mod.rs  state.rs
src/invoice/: generator.rs  mod.rs  report.rs
src/pdf/: mod.rs  typst.rs
tests/: cli_tests.rs
