[package]
name = "invoice"
version = "0.1.0"
edition = "2021"
description = "Minimal CLI invoicing system"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
thiserror = "2"
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
